# test_package_mp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pages.yml  pytest.yml  python-app.yml  release.yml  semantic-release.yaml
doc/: conf.py  index.rst
pytest/: test_basic.py
test_package_mp/: __init__.py  _version.py
