[build-system]
requires = ["hatchling>=1.17.1", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "test_package_mp"
description = "Test python package for learning"
readme = "README.md"
authors = [{ name = "Marco Passoni", email = "mpasson91@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]
dependencies = []

[tool.hatch.build]
include = ["test_package_mp/*"]
exclude = ["test_package_mp/_version.py"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"

[dependency-groups]
dev = [
    "hatch-vcs>=0.3.0",
    "nbsphinx>=0.9.5",
    "notebook>=7.3.1",
    "pytest>=8.3.4",
    "python-semantic-release>=9.15.1",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.uv.index]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"


[tool.hatch.build.hooks.vcs]
version-file = "test_package_mp/_pversion.py"

[tool.pytest.ini_options]
testpaths = ["pytest"]

[tool.semantic_release.changelog]
exclude_commit_patterns = ["Merge\b.*"]
